# mcp-market

./: .env.example  .gitignore  ADDCUSTOMMCP_REFRESH_FIX.md  ADDCUSTOMMCP_TYPE_FIX.md  AGENTS.md  CLEANUP_UNUSED_COMPONENTS.md  LICENSE  MCP_CONFIG_PRIORITY_CHANGES.md  QWEN.md  README.en.md  README.md  README_UPDATE_SUMMARY.md  TYPESCRIPT_TYPE_FIXES.md  biome.json  components.json  eslint.config.mjs  forge.config.ts  index.html  justfile  mcp_config.json  package-lock.json  package.json  tsconfig.json  vite.main.config.mts  vite.renderer.config.mts
.github/workflows/: lint.yaml
.qwen/: PROJECT_SUMMARY.md
.tanstack/tmp/: 6d95f5f5-3ddf43c83e35ac9bdbb4873db04bfc78  6d95f5f5-690b8086e198a0247bc51462fae3cb0a  6d95f5f5-ac2fb41415398152ff8260ce4c3ddae7  6d95f5f5-ce05d08e9baa863f37ce566e7d625cca  6d95f5f5-e7433fc93c155ef7843ce7bc772d375a  e9e2fff0-0b7e607ba995636e5f65e102a8eaf2c6  e9e2fff0-2ea60d522cc5e83acc6f78b735855cd5  e9e2fff0-3c9f2319cd07f4ad2a4bf7d45938b40a  (+18 more)
neteasecloud-mcp/: .eslintrc.cjs  README.md  netease_config.json  package-lock.json  package.json  tsconfig.json
public/: mcp_config.json  my_mcp_config.json
scripts/: constant.ts  electron-builder-config.ts  extract.ts  fetch_mcp_config.ts  installer-guide.md  installer.html  mcp-market-installer.iss  mcp-market-installer.nsi  mcp.md  node-live-loopback.ts  velopack-pack.ps1  velopack-upload.ps1
src/: App.tsx  main.ts  routeTree.gen.ts  types.d.ts
transcript/: index.html  index.js  package.json  preload.cjs  preload.js  render.js
wrapper/: Cargo.toml  build.rs  installer.html
wrapper/src/: main.rs
(+152 files in other folders)
