[package]
name = "mcp-market-wrapper"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
web-view = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
dirs = "5"
tinyfiledialogs = "3"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "s"
